# v_name_generator

./: .env.example  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  dist-workspace.toml
.github/workflows/: deploy.yaml  release.yml
src/: lib.rs  main.rs  name_functions.rs
