[package]
name = "v_name_generator"
version = "0.1.0"
repository = "https://github.com/000volk000/v_name_generator"
homepage = "https://github.com/000volk000/v_name_generator"
description = "A short, v-starting name generator compatible with cli, ntfy, etc..."
authors = ["Darío Martínez Kostyuk <dariomartk@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
rand = "0.9.2"
reqwest = "0.12.25"
tokio =  { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
