[package]
name = "v_name_generator"
version = "1.1.0"
repository = "https://github.com/000volk000/v_name_generator"
homepage = "https://github.com/000volk000/v_name_generator"
description = "A short, v-starting name generator compatible with cli, ntfy, etc..."
authors = ["Darío Martínez Kostyuk <dariomartk@gmail.com>"]
license = "MIT"
edition = "2024"

[features]
default = []
app = ["dep:dotenv", "dep:reqwest", "dep:tokio"]

[dependencies]
rand = "0.9.2"

dotenv = { version = "0.15.0", optional = true }
reqwest = { version = "0.13.1", optional = true }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"], optional = true }

[[bin]]
name = "v_name_generator"
path = "src/main.rs"
required-features = ["app"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
